  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/16 kain88-de, fiona-naughton, richardjgowers, tyler.je.reddy, jdetle
         euhruska, orbeckst, rbrtdlg, jbarnoud

  * 0.15.1

Enhancements

  * All classes derived from 'AnalysisBase' now display a ProgressMeter
  with 'quiet=False'
  * The 'run' method from all 'AnalysisBase' derived classes return the
  class itself.
  * Added boolean flag at lib.distances.USED_OPENMP to reveal if
    OpenMP was used in compilation (Issue #883)
  * Added Principal Component Analysis module for linear dimensionality
    reduction.
  * Added Auxiliary module for reading additional timeseries data alongside
    trajectories (Issue #785)
  * Added AnalysisFromFunction & analysis_class, see (Issue #946 and PR #950)
Fixes
  * GROWriter resids now truncated properly (Issue #886)
  * reading/writing lambda value in trr files (Issue #859)
  * fix __iter__/next redundancy (Issue #869)
  * SingleFrameReader now raises StopIteration instead of IOError on calling
    next (Issue #869)
  * Display of Deprecation warnings doesn't affect other modules anymore (Issue #754)
  * Changed nframes to n_frames in analysis modules for consistency (Issue #890)
  * fixed incompatibility with newer matplotlib in analysis.hole
  * Fixed modules that improperly documented and/or used frame slicing
    defaults (#914)
  * Fixed same interRDF can be run twice (Issue #924)
  * Support for TPR files produced by Gromacs-2016 (Issue #932)
  * Fixed parsing PDB files with CONECT records to TER entries (Issue #936)
  * Fixed parsing PDB files with single entry in CONECT record (Issue #937)
  * Progress meters are now displayed as expected on jupyter notebooks
    (Issue #927)

Changes
  * Added protected variable _frame_index to to keep track of frame iteration
    number in AnalysisBase